...
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Pocket Paint</string>
    <string name="button_brush">Brush</string>
    <string name="button_cursor">Cursor</string>
    <string name="button_ellipse">Circle/Ellipse</string>
    <string name="button_zoom">Zoom</string>
    <string name="button_pipette">Pipette</string>
    <string name="button_undo">Undo</string>
    <string name="button_redo">Redo</string>
    <string name="button_stamp">Stamp</string>
    <string name="button_rectangle">Rectangle</string>
    <string name="button_import_image">Import Image</string>
    <string name="button_eraser">Eraser</string>
    <string name="button_crop">Crop Image</string>
    <string name="button_flip">Flip</string>
    <string name="button_fill">Fill</string>
    <string name="button_move">Move</string>
    <string name="button_rotate">Rotate</string>    
    <string name="button_line">Line</string>
    <string name="cancel">Cancel</string>
    <string name="ok" tools:ignore="Typos">@android:string/ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    
...
