...
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/stroke_width_text"
...
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="5"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/stroke_width_seek_bar"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:max="100"
            android:minHeight="30dip" />

        <TextView
            android:id="@+id/stroke_width_width_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/holo_blue_bright"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/stroke_width_shape_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="24dip"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
...
