<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2022 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingEnd="@dimen/pocketpaint_welcome_margin_side"
    android:paddingStart="@dimen/pocketpaint_welcome_margin_side"
    android:paddingTop="@dimen/pocketpaint_welcome_margin_top">

    <TextView
        android:id="@+id/pocketpaint_intro_welcome_head"
        style="@style/PocketPaintWelcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/welcome_to_pocket_paint" />

    <TextView
        android:id="@+id/pocketpaint_intro_welcome_text"
        style="@style/PocketPaintWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pocketpaint_intro_welcome_head"
        android:layout_marginTop="@dimen/pocketpaint_welcome_margin_top_text"
        android:text="@string/intro_welcome_text" />

</RelativeLayout>
